--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:800">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -34,44 +34,39 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
-
-
 <body>
 
-<section id="toc"> 
+  <section id="toc">
+  </section>
 
-</section>
+  <!-- SECTION ONE START through our lost mother-->
+  <section id="editor-note">
+  </section>
 
-<!-- SECTION ONE START through our lost mother-->
-<section id="editor-note"> 
-</section>
+  <section id="kriska">
+    <img src = "images/1.png">
+    <h1> hello test title </h1>
+    <h2> by Kriska </h2>
+    <p> some paragraph!! </p>
+  </section>
 
-<section id="kriska">
-<img src = "images/1.png">
-<h1> hello test title </h1>
-<h2> by Kriska </h2>
-<p> some paragraph!! </p>  
-</section>
+  <section id="rain">
+  </section>
 
-<section id="rain">
-
-</section> 
-
-<!-- SECTION TWO START throgh Fault line swell-->
+  <!-- SECTION TWO START through Fault line swell-->
 
 
-<!-- SECTION THREE START through curly hair routinue -->
+  <!-- SECTION THREE START through curly hair routine -->
 
 
-<!-- SECTION FOUR START through mother-->
+  <!-- SECTION FOUR START through mother-->
 
-<!-- SECTION FIVE START through parting shot-->
 
-<!-- put credits including art here -->
-<section id="parting">
+  <!-- SECTION FIVE START through parting shot-->
 
-</section>
-
+  <!-- put credits including art here -->
+  <section id="parting">
+  </section>
 
   <!-- Javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
