--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
   <section id="rain">
   </section>
 
-  <!-- SECTION TWO START through Fault line swell-->
+  <!-- SECTION TWO START letter to editor through our lost other-->
 
 
-  <!-- SECTION THREE START through curly hair routine -->
+  <!-- SECTION THREE START, big chop through star ferry -->
 
 
-  <!-- SECTION FOUR START through mother-->
+  <!-- SECTION FOUR START I don't feel trapped anymore through for colored women-->
 
 
-  <!-- SECTION FIVE START through parting shot-->
+  <!-- SECTION FIVE START a guide to helping depressed parents through a future maybe-->
 
   <!-- put credits including art here -->
   <section id="parting">
