adding clear sections

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="toc">
   </section>
 
-  <!-- SECTION ONE START through our lost mother-->
+  <!-- SECTION ONE START letter to editor through all grown up-->
   <section id="editor-note">
   </section>
 
@@ -53,16 +53,16 @@
   <section id="rain">
   </section>
 
-  <!-- SECTION TWO START letter to editor through our lost other-->
+  <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
 
 
-  <!-- SECTION THREE START, big chop through star ferry -->
+  <!-- SECTION THREE START, mary's grandbaby through limbo -->
 
 
-  <!-- SECTION FOUR START I don't feel trapped anymore through for colored women-->
+  <!-- SECTION FOUR START A slow brunch through a guide to helping depressed parents-->
 
 
-  <!-- SECTION FIVE START a guide to helping depressed parents through a future maybe-->
+  <!-- SECTION FIVE START unmasked friend through a future maybe-->
 
   <!-- put credits including art here -->
   <section id="parting">
