deppressed parents and curly hair articles

--- a/index.html
+++ b/index.html
@@ -92,6 +92,87 @@
     </div>
   </section>
 
+  <section id="curly-routine">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-sm-6">
+          <h1>My Curly Hair Routine</h1>
+          <h2>By Morgan Freeman</h2>
+          <br>
+          <div class="text">
+            <p>wake up at 5 a.m.</p>
+            <p>wash hair</p>
+            <p style="padding-left: 15px;">shampoo</p>
+            <p style="padding-left: 30px;">condition</p>
+            <p style="padding-left: 45px;">detangle</p>
+            <p style="padding-left: 60px;">detangle</p>
+            <p style="padding-left: 75px;">d</p>
+            <p style="padding-left: 60px;">e</p>
+            <p style="padding-left: 75px;">t</p>
+            <p style="padding-left: 60px;">a</p>
+            <p style="padding-left: 75px;">n</p>
+            <p style="padding-left: 60px;">g</p>
+            <p style="padding-left: 75px;">l</p>
+            <p style="padding-left: 60px;">e</p>
+            <p>&nbsp;</p>
+            <p>use whatever product you can find</p>
+            <p>mom&rsquo;s TRESemm&eacute;&reg; mousse will do</p>
+            <p>let air dry</p>
+            <p>&nbsp;</p>
+            <p>arrive at school at 7 a.m.</p>
+            <p>sit at your desk</p>
+            <p>let the stylists get to work!</p>
+            <p>you may not always recognize them</p>
+            <p>don&rsquo;t turn around</p>
+            <p>&nbsp;</p>
+            <p>pens and</p>
+            <p>pencils and</p>
+            <p>paper will do</p>
+            <p>don&rsquo;t worry if they use gum</p>
+            <p>Orbit&reg; has all day hold</p>
+            <p>&nbsp;</p>
+            <p>excuse yourself to the bathroom</p>
+            <p>remove any excess debris</p>
+            <p>tie hair back</p>
+            <p>&nbsp;</p>
+            <p>repeat daily</p>
+          </div>
+        </div>
+
+        <div class="col-sm-6 img">
+
+          <img src="images/routine.png">
+        </div>
+
+
+  </section>
+
+  <section id="keep-love">
+  </section>
+
+  <section id="colored-women">
+  </section>
+
+  <section id="guide-parents">
+    <div class="container">
+      <h1>A Guide to Helping Depressed Parents</h1>
+      <h2>By Michael Fogg</h2>
+      <p>1. Count how many parents you have that are depressed. This number should be somewhere between zero and two, not including any additional step or foster parents/ guardians. If the number is greater than zero, continue with the rest of this poem.</p>
+      <p>2. Try to determine which of your parents are depressed. Now, some have said to consult a psychiatrist, or a psychologist, or WebMD, but I usually just look for the 50 million excuses why someone can&rsquo;t get out of bed.</p>
+      <p>3. Attempt to approach your parents and talk about depression. If you have one or more depressed parent, do not be alarmed, this may be difficult. Asking them if they have depression will ricochet like arrows on steel-plate armor, telling them will get you a broadsword through the stomach. You have to pick apart the cloud that 50 years of fear has put around them water molecule by water molecule, you have to hold their parental pride in your hands like your own child and nurse it back to health, you have to drive an SUV through the walls of the dark, heavy box they are trapped in.</p>
+      <p>4. Ask them to get help. Ask them to put depression on their back like a cape and fly like the super hero you always knew they could be, ask them to accept society&rsquo;s view that they have done something to make them this sad, ask them to look at themselves in the mirror and believe they have failed you.</p>
+      <p>5. When that conversation is over, walk out of the room. Keep your mind there but put your body elsewhere.</p>
+      <p>6. Watch for signs in the followings days, weeks, months. Look for the appointments on the floral kitchen calendar, look for which hand is dragging them through this mud, look for the empty chair they leave when they go on their stress walks. Pray to god every night that you see these things, and if you don&rsquo;t, pray they haven&rsquo;t spiraled so far you can&rsquo;t catch them.</p>
+      <p>7. Find ways to put in gentle reminders. Ask them how their bodies felt today when they moved through molasses, ask them what the name of their therapist is and how many kids or dogs or cats he/she has, ask them if that hopeful silver star is in the sky again.</p>
+      <p>8. Be disappointed when they tell you it isn&rsquo;t. Make your room a bunker, and accept that this is not a battle but a war, and wars are won in trenches. Watch the pill-shaped bullets fly in and out for years, as they change from blue to green to white and back again. Cry with them, cry without them, cry for them and about them, look down the cliff and hope they still see the ladder up to where you are standing.</p>
+      <p>9. Recognize they may not. Recognize that loving someone with depression is still not being someone with depression, and that you will never totally understand why they can&rsquo;t seem to dance today.</p>
+      <p>10. Enjoy every moment you have with them, for the days full of freedom come in unexpected bursts. Eat french fries, walk your dogs together, laugh, love. Go on surprising road trips and bring home unexpected trinkets, write with them, make fun of them and hug them. Shake off whatever feels normal, and when it comes knocking, wait for one more moment before you open the door again.</p>
+    </div>
+  </section>
+
+
+
   <!-- SECTION FIVE START unmasked friend through a future maybe-->
 
   <!-- put credits including art here -->
