adding section 2 (without hair images

--- a/index.html
+++ b/index.html
@@ -111,6 +111,85 @@
   </section>
 
   <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
+<section id="etsi">
+    <div class="etsi-inner">
+    <div class="etsi-title">
+    <h1>Etsi <br />Udiditlv // <br/>Our Lost<br/>Mother</h1>
+    <h2>(ah-chee ouh-dee-deet-lun)</h2>
+    <h2>by Josie Watson</h2>
+    </div>
+
+    <!-- div class="etsi-inner"><img src="images/etsi-1.png" /></div> -->
+    <div class="etsi-text">
+    <p>I wonder, was she invited to the table?<br/>  In this country of plenty,<br/>  the Fatherland,<br/>  where wedding feasts abound,<br/> Catholics, Muslims, Protestants, Jews, Hindus often compromise<br/>with their spouses, on how their children will worship, <br/>be taught to transcend their minds, <br/>and connect their spirits to the world.</p>
+    <p>Was she consulted?<br/> Asked, while holding each new pale, ash-headed infant, <br/> what language they would speak, how they would know the world?  <br/>Did she come to understand how her new world would pull her babies <br/>from her breast, and make them strangers to her? </p>
+
+    <p>And her Mother, did she become a stranger to her? <br/>How did she live, severed from her roots?  <br/>She who built my fathers, my grandmothers, great-grandfathers <br/>noses like the Sentinel rock, gave them skin that browns like clay in the sun,  <br/>she who blessed them with storyteller tongues, <br/>she whose soul breathed into their spirit  <br/>a temperament, “a gentle manner,”  <br/>a peace-loving disposition that often awakens <br/>with reverence for harmony  <br/>and connection with nature, with all children of the earth, with life itself.<br/>The ancient Cherokee status quo. </p>
+
+    <p>Did they handle her spirit gently, or swing their fists, beat it down?  <br/>Did she live like a ghost, haunting, <br/>not inhabiting, their Whitewashed land, <br/>as she now haunts our family bloodline; quiet, unknown?  <br/>While during the day she wandered, through Georgia pines and magnolias,  <br/>was her soul swept into the buzzing universe of souls that surrounds us–  <br/>even us, our information hungry, spiritually blind generation–</p>
+
+    <p>into that world which is not caged within wood, stone and stained glass,  <br/>not stringed to the hand of an omnipotent Father, but is in and around us? </p>
+
+    <p>The sun, water, snow, air, rocks all as filled with life  <br/>as any human  <br/>did she converse with them, feast at their table, was she that free?  <br/>I often dream of her with silver hair, in a stiff English gown, <br/>her tongue having lost touch with her nation’s words  <br/>imbued with the power to open ears and eyes to earth’s symphony,   <br/>not alone, but dejected,  <br/>not depressed, but lost, </p>
+
+    <p>as my mind stretches and aches to inherit her wisdom,  <br/>in dreams, day and night, <br/>but always wakes to find <br/>this country has left it behind.</p>
+
+    <p>Why is it that my family should forget this mother, <br/>even as her blood courses through our veins,  <br/>her voice whispers in its mother tongue  <br/>through the depths of our consciousness? <br/>Her energy is so remarkably hers that I feel it  <br/>as it passes me in the wind, through the trees, <br/>or enters my dreams at night <br/>rustling the feathers of my dreamcatcher.</p>
+
+    <p>Don’t you,  <br/>your feet grounded in American soil, <br/>feel her  <br/>seeping between the fingers of the Father’s closed fists?  <br/>I wander, through magnolias and pines, seeking a seat at her table, <br/>ears straining, spirit thirsty</p>
+    </div>
+    </div>
+    
+  </section>
+
+  <section id="big-chop">
+    <div id="big-chop-text">
+    <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
+    
+    <p>I had grown accustomed to<br/>people laughing<br/>at its dead ends <br/>and unwillingness to lie down</p>
+
+    <p> No one told me <br/>that my hair was learning how to sing <br/>and that every time <br/>it faced the scalding relaxers <br/>and red-hot flat irons, <br/>I was erasing <br/>the tone of my hair’s voice <br/>its unrelenting texture <br/>its powerful volume</p>
+
+    <p>Those scissors freed me <br/>as I watched the straight pieces fall away <br/>I began to love myself <br/>for everything I am <br/>for my afro that rises towards the sun <br/>for the strength to break combs <br/>for the power to revert back after being abused</p>
+
+    <p>I am no longer drowning in the sea of white wishes, <br/>feeling weighed down by my Black gifts wrapped in gold</p>
+    </div>
+
+    <div id="big-chop-title">
+      <h1>Big Chop</h1>
+      <h2>by Melanie Horton</h2>
+    </div>
+  </section>
+
+  <section id="mira-que">
+    <!-- <div id="mira-que-title"> -->
+      <h1>Mira Que Te Quiso, Fue Por Tu Pelo</h1>
+      <h2>Leticia Rocha</h2>
+    <!-- </div> -->
+    <div>
+    <p>
+    (Look, if I loved you, it was for your hair...)<br/>these lyrics spin around my head <br/>each note like a dagger to the ear <br/>as I sit in this barren room,  <br/>sickly-sweet melody echoing your absence. <br/>cold silver scissors find their way <br/>into my hand, destined  <br/>for the coarse, dark strands of hair <br/>you once ran your fingers through. <br/>snip, snip, like a surgical blade <br/>across the umbilical cord, <br/>clumps of black pouring <br/>heavily, each curl burdened  <br/>with stories of you. <br/>my fingers clasp the last lock, <br/>an emblem of sacrifice. <br/>I am obliterating this carcass  <br/>you betrayed and ravaged,  <br/>ready to rise as a newborn babe <br/>out of the black tendrils I slayed. <br/>...ahora que estás pelona ya no te quiero. <br/>(...now that you are bald, I don’t love you anymore.)
+    </p>
+    </div>
+  </section>
+
+  <section id="blackberries">
+    <div>
+    <h1>Blackberries <br/>& Brown Sugar</h1>
+    <h2>by Kayla Williams</h2>
+    </div>
+
+    <p>The amber skin you swim in <br/>Sits atop a magic dark and pure <br/>A night sky eternal <br/>Body tangled in the shackles of a supremacy that will forever remain <br/>Jaundiced and pasty</p>
+
+    <p>Sugar cane cracks in palms <br/>The cash crop slices the life line <br/>the fate line <br/>the heart line <br/>This is what you’re destined to be <br/>Bloody broken and loveless</p>
+
+    <p>Men don’t like brown girls unless they have fat asses <br/>And corporations won’t hire you without the white assets and even then <br/>Money doesn’t buy freedom <br/>Even then <br/>You will be exiled from the kingdom <br/>I promise you <br/>There will never be a seat for you beside the almighty whitey <br/>No, that just ain’t something you can be <br/>Not unless it’s for you to feed the monster your own insides <br/>marinated in the blood of your most mutilated ancestor</p>
+
+    <p>Baby you just gon’ have to build your own throne <br/>There is nothing wrong with being a self-proclaimed queen <br/>Plant seeds and when they are nourished by enough spilled Black blood <br/>Watch a revolution sprout at the foot of your throne <br/>Call it your own because it’s for you <br/>Call her your sister</p>
+
+    <p>Every root carries water back to the same tree <br/>Nude thick Black skin that smells of cinnamon and shea butter  <br/>You are a colored girl shaded by a soil so fertile it birthed the first black brown porcelain woman <br/>with lips like rose petals and hips that curve like the Nile</p>
+
+  </section>
 
 
   <!-- SECTION THREE START, mary's grandbaby through limbo -->
