You can keep your love section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
   <br>
   <br>
 
-  <p> 
+  <p>
     For as long as I can remember, I’ve seen things in color. Songs, feelings, foods, moments; each holds its individually wrapped shade that invades my head when they pass me by. Holding the hand of someone I love is deep midnight blue like the sky in Somerville after a rainstorm. My best friend’s laughter is swirled with rich mahogany and chestnut. Getting in bed after a particularly arduous day is the dark, metallic orange of pennies. Fear is gray.
   </p>
   <br>
   <p>
   The world we live in continues to be flat and colorless, filled with violence, terror, and brutal imaginations. I spend each of my days striving to collect colors, to break open and split apart the fear that clouds my life as a Black woman, and the lives of marginalized people everywhere. Often this collection comes from the words I read. Words, for me, give off the brightest, most brilliant colors. They are an antidote for the powerlessness that I feel in the face of structures that demand my demise. They remind me that while this world may not have been built for many of us to survive it, the people before us and those who will come after have used their hands (and their pens) to see through the hopelessness and imagine a new world—one throbbing with hues that reach into each splintered corner and start the process of transforming and mending—and call upon us to do the same.
-  </p> 
+  </p>
   <br>
   <p>
   Inside the pages of this Literary Issue are an abundance of these colors. They are the words of people whose voices are normally silenced, cast aside, forgotten, and erased. They are the words of people of color, queer and trans people, poor people, Disabled people, the words of people who are often overlooked on this campus and in the world. Their words are words of fear, of hurt, of melancholy, of questions without clear answers. But they are also the words of warmth, of strength, of hope, of resistance. They are words that demand to be read and heard. They are the stories that need to be told. So, I hope you, Reader, open these pages with tender care and let them flood you with color.
@@ -72,7 +72,7 @@
 <p>&nbsp;</p>
 <p>I don&rsquo;t remember the exact moment I realized that my New England private school had given me training rather than education&mdash;training to assimilate into a White corporate world that will never truly accept me. The romance of sending a Black girl to New England so she can chase opportunity fades when you realize the cost of that opportunity. The romance of <em>Beauty &amp; the Beast </em>quickly fades when you realize that Beauty could not have loved Beast without first training him, without teaching him how to hold a spoon, without teaching him how to ice skate, without teaching him to be more like her. The romance of <em>Beauty &amp; the Beast </em>fades when you realize that Disney slimly averts tragedy</p>
 
- <div id="black_life_title"> 
+ <div id="black_life_title">
  <h1> The Spectacle of Black Life </h1>
  <h2> by Kriska Desir</h2>
  </div>
@@ -206,9 +206,33 @@
   </section>
 
   <section id="keep-love">
+
+          <h1>You Can Keep Your <span class="red">Love</span></h1>
+          <h2>By Cayla Brown</h2>
+
+          <br>
+
+          <p>Does love trump hate?<br />Does love keep us safe?</p>
+          <p>Will Black boys hugging cops stop bullets<br />From piercing their backs?<br />Will my march keep the off-duty officer from drawing his gun on<br />A &ldquo;Trespasser?&rdquo;<br />Will my resistance exonerate the innocent,<br />convince the &ldquo;witness&rdquo; to recant her lie?<br />When will this &ldquo;love&rdquo; shine on melanin like the sun<br />Remind them that life is birthed from generous Black women.</p>
+          <p>Does love eat fear?<br />gobble up the anxiety that shoots through your muscles like lightning</p>
+          <p>when you are stopped by the police,<br />border control<br />any White person</p>
+          <p>seeking to enact their makeshift justice;<br />demanding English to be the only tongue you employ,<br />says the hijab is unsettling,<br />equates nationalism with destabilization of the other,<br />calls you out of your name<br />tells you you&rsquo;d be safer if you didn&rsquo;t resist<br />didn&rsquo;t burn shit<br />didn&rsquo;t make them notice the anger<br />tell me<br />when is the "love" supposed to kick in?</p>
+          <p>We have been waiting<br />in the street<br />online<br />on the phone<br />on standby<br />for this love to swoop in,</p>
+          <p>massage our feet<br />pour honey on the pain<br />call us sacred<br />thank the melanin<br />for our struggle<br />our service<br />our time<br />pluck out the thorns<br />soothe the memories with aloe</p>
+          <p>and reparations</p>
+          <p>Yet love stays absent<br />Does this kind of love exist?<br />Has it ever?</p>
+        </div>
+
+        <img src="images/flag.png">
+
   </section>
 
   <section id="colored-women">
+    <h1>For Colored Women</h1>
+    <h2>By Anonymous</h2>
+    <p>I cannot escape my Blackness <br />I cannot escape the body that identifies (targets) me <br />I cannot escape the body that betrays me <br />I cannot escape <br />The color of my skin, <br />The size of my hips, <br /> The curl of my hair <br />Too much <br />Too big <br />Too hood <br />Too sexy (I am 10 and you smell stale, like cigarettes and sweat) <br />Too much of a tease (I am 17 and you reek of entitlement and your dirty uniform) <br />Yet somehow not enough, <br />I am not enough to be loved, <br />I am not a human, <br />I am a receptacle. <br />I am trapped in my body <br />Shattered <br />I am the damaged goods <br />That no amount of bubble wrap and cardboard box was ever strong enough to protect <br />I don&rsquo;t (can&rsquo;t) dream, I cry <br />I shove my face into my pillow and try to suffocate myself <br />I want the darkness to swallow me <br />I pray to God that I don&rsquo;t wake up <br />(can you hear me?) <br />I can not love <br />(have I ever been capable of love?) <br />(are objects worthy of love?)</p>
+    <p>I meet you <br />now I am 19 and my skin smells like fear <br />your skin tastes sweet like rain and a little salty because of the tears <br /> (are they yours or mine?) <br />Together our bodies lay exhausted <br />But your eyes are so bright <br />We are a mess <br />A tangle of limbs <br />my fingers run through the waves of your hair <br />While you trace the curve of my arm <br /> I have never been touched so gently <br />This time I cry sweet tears while your sweeter name sits on my tongue <br />We are damp, sticky and almost the same shade of brown <br />I cannot tell where I end and you begin <br />I have never been more in lust <br />I have never been more in love</p>
+    <p>For the colored women who hold a mind consuming love for other colored women <br /> For the colored woman who saved my life</p>
   </section>
 
   <section id="guide-parents">
